# CombatID

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  NETLIFY_DEPLOYMENT_FIX.md  README.md  TICKETS.md  docker-compose.yml  netlify.toml  package-lock.json  package.json
apps/ai-service/: .env.example  main.py  requirements.txt
apps/api/: .env.example  .gitignore  Dockerfile.dev  PHASE0_STATUS.md  README.md  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/analytics/: analytics.controller.ts  analytics.service.ts
apps/api/src/approvals/: approvals.controller.ts  approvals.module.ts  approvals.service.ts
apps/api/src/audit/: audit.controller.ts  audit.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/bouts/: bouts.controller.ts  bouts.module.ts  bouts.service.ts  index.ts
apps/api/src/common/: index.ts
apps/api/src/config/: configuration.ts  validation.schema.ts
apps/api/src/consent/: consent.controller.ts  consent.service.ts
apps/api/src/documents/: documents.controller.ts  documents.module.ts  documents.service.ts
apps/api/src/eligibility/: index.ts  (+3 more)
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/web/: netlify.toml.backup  next.config.js  package.json
docs/: AUTH0_SETUP.md  netlify-optimization.md
infrastructure/: init-db.sql
scripts/: setup-dev.sh
services/ai/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  pyproject.toml  requirements.txt  verify_setup.py
services/ai/app/: __init__.py  config.py  main.py
services/ai/app/api/: deps.py
services/ai/app/api/routes/: documents.py  extraction.py  health.py
services/ai/app/core/: __init__.py  exceptions.py  logging.py
services/ai/app/models/: document.py  extraction.py
services/ai/app/services/: classifier.py  extractor.py  openai_client.py  textract.py
services/ai/tests/: __init__.py  conftest.py  test_health.py
services/ai/tests/test_api/: test_documents.py
(+110 files in other folders)
